force-app/main/default/objects/b3o__Application__c/b3o__Application__c.object-meta.xml
<CustomObject>
    <label>3B Application</label>
    <nameField>
        <displayFormat>APP-{YYYY}{MM}-{0}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3B Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>