force-app/main/default/objects/b3o__Application__c/fields/b3o__Application_Date__c.field-meta.xml
<CustomField>
    <fullName>b3o__Application_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Application Date</label>
    <type>DateTime</type>
</CustomField>