force-app/main/default/objects/b3o__Application__c/fields/b3o__Application_Time__c.field-meta.xml
<CustomField>
    <fullName>b3o__Application_Time__c</fullName>
    <label>Application Time</label>
    <type>Time</type>
</CustomField>