force-app/main/default/objects/b3o__Application__c/fields/b3o__Candidate__c.field-meta.xml
<CustomField>
    <fullName>b3o__Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3B Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>