force-app/main/default/objects/b3o__Application__c/fields/b3o__Current_Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>b3o__Current_Application_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Application Stage</label>
    <referenceTo>b3o__Application_Stage__c</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>