force-app/main/default/objects/b3o__Application__c/fields/b3o__Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>b3o__Current_Stage__c</fullName>
    <formula>b3o__Current_Application_Stage__r.b3o__Recruitment_Step__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage</label>
    <type>Text</type>
</CustomField>