force-app/main/default/objects/b3o__Application__c/fields/b3o__Current_Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Current_Stage_Status__c</fullName>
    <formula>Text(b3o__Current_Application_Stage__r.b3o__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage Status</label>
    <type>Text</type>
</CustomField>