force-app/main/default/objects/b3o__Application__c/fields/b3o__Job__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job__c</fullName>
    <label>Job</label>
    <referenceTo>b3o__Job__c</referenceTo>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>