force-app/main/default/objects/b3o__Application__c/fields/b3o__Job_Board__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Board</label>
    <referenceTo>b3o__Job_Board__c</referenceTo>
    <relationshipLabel>3B Applications</relationshipLabel>
    <relationshipName>X3B_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>