force-app/main/default/objects/b3o__Application__c/fields/b3o__Location__c.field-meta.xml
<CustomField>
    <fullName>b3o__Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Outside London</fullName>
            </value>
            <value>
                <fullName>Live in required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>