force-app/main/default/objects/b3o__Application__c/fields/b3o__Progress__c.field-meta.xml
<CustomField>
    <fullName>b3o__Progress__c</fullName>
    <formula>IF(ISBLANK(text(b3o__Status__c)) ||  ISPICKVAL(b3o__Status__c, &apos;In Review&apos;) ,HYPERLINK(&quot;/apex/b3o__ApplicationStageManager?id=&quot; &amp; Id, 
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot; &quot;)), IF(ISPICKVAL(b3o__Status__c, &apos;Accepted&apos;) ,HYPERLINK(&quot;/apex/b3o__ApplicationStageManager?id=&quot; &amp; Id, 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot; &quot;)), IF(ISPICKVAL(b3o__Status__c, &apos;Rejected&apos;) ,IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot; &quot;), &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>