force-app/main/default/objects/b3o__Application__c/fields/b3o__Source_Job_Board__c.field-meta.xml
<CustomField>
    <fullName>b3o__Source_Job_Board__c</fullName>
    <label>Source Job Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>b3o__Company_Job_Boards</valueSetName>
    </valueSet>
</CustomField>